<resources>
    <string name="app_name">ApProtest</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="first_name">First Name</string>
    <string name="surname_prompt">Surname</string>
    <string name="goto_login_member">I\'m already a member</string>
</resources>